# src/Opdex.Auth.Api/Controllers/AuthController.cs
@@ -8,89 +8,58 @@ using Microsoft.AspNetCore.Mvc;
 using Microsoft.Extensions.Options;
 using Opdex.Auth.Api.Conventions;
 using Opdex.Auth.Api.Encryption;
-using Opdex.Auth.Api.Helpers;
 using Opdex.Auth.Api.Models;
 using Opdex.Auth.Domain;
 using Opdex.Auth.Domain.Requests;
-using SSAS.NET;
 
 namespace Opdex.Auth.Api.Controllers;
 
 [ApiController]
 [Route("v{version:apiVersion}/auth")]
 [ApiVersion("1")]
+[SnakeCaseJsonSerializationFilter]
 public class AuthController : ControllerBase
 {
-    private readonly ITwoWayEncryptionProvider _twoWayEncryptionProvider;
+    private readonly IOptionsSnapshot<PromptOptions> _promptOptions;
     private readonly IMediator _mediator;
-    private readonly StratisIdValidator _stratisIdValidator;
     private readonly IJwtIssuer _jwtIssuer;
-    private readonly IOptionsSnapshot<ApiOptions> _apiOptions;
 
-    public AuthController(ITwoWayEncryptionProvider twoWayEncryptionProvider, IMediator mediator,
-                          StratisIdValidator stratisIdValidator, IJwtIssuer jwtIssuer, IOptionsSnapshot<ApiOptions> apiOptions)
+    public AuthController(IMediator mediator, IJwtIssuer jwtIssuer, IOptionsSnapshot<PromptOptions> promptOptions)
     {
-        _twoWayEncryptionProvider = Guard.Against.Null(twoWayEncryptionProvider, nameof(twoWayEncryptionProvider));
-        _mediator = Guard.Against.Null(mediator);
-        _stratisIdValidator = Guard.Against.Null(stratisIdValidator);
-        _jwtIssuer = Guard.Against.Null(jwtIssuer);
-        _apiOptions = Guard.Against.Null(apiOptions);
+        _promptOptions = Guard.Against.Null(promptOptions, nameof(promptOptions));
+        _mediator = Guard.Against.Null(mediator, nameof(mediator));
+        _jwtIssuer = Guard.Against.Null(jwtIssuer, nameof(jwtIssuer));
     }
     
-    [HttpGet]
-    public ActionResult<string> GetStratisId()
+    [HttpGet("authorize")]
+    public async Task<IActionResult> Authorize([FromQuery] AuthorizeRequestQuery query, CancellationToken cancellationToken)
     {
-        var expiry = DateTimeOffset.UtcNow.AddMinutes(5).ToUnixTimeSeconds();
-        var uid = Base64Extensions.UrlSafeBase64Encode(_twoWayEncryptionProvider.Encrypt($"{Guid.NewGuid()}{expiry}"));
-        return Ok(new StratisId($"{_apiOptions.Value.Authority}{Request.Path}", uid, expiry).ToString());
-    }
-
-    [HttpPost]
-    public async Task<IActionResult> StratisSignatureAuth([FromQuery] StratisSignatureAuthCallbackQuery query,
-        [FromBody] StratisSignatureAuthCallbackBody body,
-        CancellationToken cancellationToken)
-    {
-        var result = await _stratisIdValidator.RetrieveConnectionId($"{_apiOptions.Value.Authority}{Request.Path}", query, body, cancellationToken);
-        if (result.IsFailed) return ProblemDetailsBuilder.BuildResponse(HttpContext, StatusCodes.Status400BadRequest, result.Errors[0].Message);
-
-        var authCode = new AuthCode(body.PublicKey);
-        await _mediator.Send(new PersistAuthCodeCommand(authCode), cancellationToken);
-        return Ok(authCode.Value);
-    }
-    
-    [HttpPost]
-    [Route("callback")]
-    public async Task<IActionResult> StratisSignatureAuthCallback([FromQuery] StratisSignatureAuthCallbackQuery query,
-        [FromBody] StratisSignatureAuthCallbackBody body,
-        CancellationToken cancellationToken)
-    {
-        var result = await _stratisIdValidator.RetrieveConnectionId($"{_apiOptions.Value.Authority}{Request.Path}", query, body, cancellationToken);
-        if (result.IsFailed) return ProblemDetailsBuilder.BuildResponse(HttpContext, StatusCodes.Status400BadRequest, result.Errors[0].Message);
-
-        var authCode = new AuthCode(body.PublicKey);
-        var success = await _mediator.Send(new PersistAuthCodeCommand(authCode), cancellationToken);
-        if (!success) return ProblemDetailsBuilder.BuildResponse(HttpContext, StatusCodes.Status500InternalServerError);
+        var session = new AuthSession(query.CodeChallenge, query.CodeChallengeMethod);
+        await _mediator.Send(new PersistAuthSessionCommand(session), cancellationToken);
         
-        await _mediator.Send(new PersistAuthSuccessCommand(new AuthSuccess(result.Value, body.PublicKey)), cancellationToken);
-        await _mediator.Send(new NotifyAuthSuccessCommand(result.Value, authCode.Value), cancellationToken);
-        return NoContent();
+        var authPromptUri = $"{_promptOptions.Value.Prompt}?redirect_uri={query.RedirectUri}&stamp={session.Stamp}";
+        if (query.State is not null) authPromptUri += $"?state={query.State}";
+        return Redirect(authPromptUri);
     }
     
-    [HttpPost]
-    [Route("verify")]
-    public async Task<IActionResult> Verify([FromBody] AccessTokenRequestBody body, CancellationToken cancellationToken)
+    [HttpPost("token")]
+    public async Task<IActionResult> RequestToken([FromForm] AccessTokenRequestBody body, CancellationToken cancellationToken)
     {
-        var authCode = await _mediator.Send(new SelectAuthCodeQuery(body.Code), cancellationToken);
-        if (authCode is null || !authCode.Verify()) return ProblemDetailsBuilder.BuildResponse(HttpContext, StatusCodes.Status400BadRequest, "Invalid or expired authorization code");
+        var authCode = await _mediator.Send(new SelectAuthCodeByValueQuery(body.Code), cancellationToken);
+        if (authCode is null || !authCode.Expired)
+            return ProblemDetailsBuilder.BuildResponse(HttpContext, StatusCodes.Status400BadRequest, "Invalid or expired authorization code");
 
+        var authSession = await _mediator.Send(new SelectAuthSessionByIdQuery(authCode.Stamp), cancellationToken);
+        if (!authSession.Verify(body.CodeVerifier))
+            return ProblemDetailsBuilder.BuildResponse(HttpContext, StatusCodes.Status400BadRequest, "Unable to verify code challenge");
+        
         await _mediator.Send(new DeleteAuthCodeCommand(authCode), CancellationToken.None);
         var bearerToken = _jwtIssuer.Create(authCode.Signer);
         return Ok(bearerToken);
     }
-
-    [HttpGet]
-    [Route("jwks")]
-    public async Task<ActionResult<JsonWebKeySetResponse>> GetJwks()
+    
+    [HttpGet("keys")]
+    public async Task<ActionResult<JsonWebKeySetResponse>> GetKeys()
     {
         return Ok(new JsonWebKeySetResponse(await _jwtIssuer.GetPublicKeys()));
     }
