# src/Opdex.Auth.Api/Models/AccessTokenRequestBody.cs
@@ -5,4 +5,6 @@ namespace Opdex.Auth.Api.Models;
 public class AccessTokenRequestBody
 {
     public Guid Code { get; set; }
+
+    public string CodeVerifier { get; set; }
 }
